examples/errors/cons.spl

main() {
    2:'a':[];
}